--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,8 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - href: werkwijze.qmd
+        text: Werkwijze
 
 format:
   html:
